# fortran-cmake-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
app/: CMakeLists.txt  app.f90
src/: CMakeLists.txt  example.f90
test/: CMakeLists.txt  test.f90
